// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider should work with align and volume 1`] = `
<div>
  <div
    class="jsx-1680976430 divider "
    role="separator"
  >
    <span
      class="jsx-1680976430 text start"
    >
      start
    </span>
  </div>
  <div
    class="jsx-1680976430 divider "
    role="separator"
  >
    <span
      class="jsx-1680976430 text start"
    >
      left
    </span>
  </div>
  <div
    class="jsx-1680976430 divider "
    role="separator"
  >
    <span
      class="jsx-1680976430 text end"
    >
      end
    </span>
  </div>
  <div
    class="jsx-1420028781 divider "
    role="separator"
  >
    <span
      class="jsx-1420028781 text start"
    >
      start
    </span>
  </div>
</div>
`;

exports[`Divider should work with type 1`] = `
<div>
  <div
    class="jsx-3362292762 divider "
    role="separator"
  />
  <div
    class="jsx-251590746 divider "
    role="separator"
  />
  <div
    class="jsx-1614429658 divider "
    role="separator"
  />
</div>
`;

exports[`Divider should work with x and y 1`] = `
<div>
  <div
    class="jsx-273775825 divider "
    role="separator"
  />
  <div
    class="jsx-2565006220 divider "
    role="separator"
  />
</div>
`;
